chore(noctalia): update
Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/noctalia/pam/password.conf
+++ b/dot_config/noctalia/pam/password.conf
@@ -1,4 +1,4 @@
-# only uncomment this if you have a fingerprint reader
-auth sufficient pam_fprintd.so max-tries=1
+auth sufficient pam_fprintd.so timeout=-1
+auth sufficient /run/current-system/sw/lib/security/pam_fprintd.so timeout=-1 # for NixOS
 auth sufficient pam_u2f.so
 auth required pam_unix.so
