--- a/.gitmodules
+++ b/.gitmodules
@@ -5,6 +5,7 @@
 [submodule "submodules/noctalia-shell"]
 	path = submodules/noctalia-shell
 	url = https://github.com/noctalia-dev/noctalia-shell.git
+	branch = main
 [submodule "submodules/dotbot-if"]
 	path = submodules/dotbot-if
 	url = https://github.com/mikybars/dotbot-if.git
