feat(hypr): use nwg-display for monitor config
- Switch to nwg-display for monitor layout config.
- Remove kanshi and wdisplays.

Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -69,6 +69,14 @@
             glob: true
             path: ifgdt/hypr/override.d/*
 
+- if:
+    cond: hostname | grep -q 'ifglt'
+    met:
+      - link:
+          ~/.config/hypr/override.d/:
+            glob: true
+            path: ifglt/hypr/override.d/*
+
 - shell:
     - [
         update-desktop-database ~/.local/share/applications/,
