fix(autostart): disable sunshine remote desktop app
Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/hypr/conf.d/apps.conf
+++ b/dot_config/hypr/conf.d/apps.conf
@@ -36,7 +36,7 @@ exec-once = $run_app vicinae server
 # email client
 exec-once = $run_app thunderbird
 # remote desktop
-exec-once = $run_app sunshine
+# exec-once = $run_app sunshine
 # easy effects
 # exec-once = $run_app easyeffects --gapplication-service
 
