refactor(config): switch noctalia-shell to AUR pkg
Adopt noctalia-shell from AUR to reduce maintenance overhead and
simplify updates.

Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/hypr/conf.d/apps.conf
+++ b/dot_config/hypr/conf.d/apps.conf
@@ -10,8 +10,8 @@ $volume_decrease = $run_app pactl set-sink-volume @DEFAULT_SINK@ -5%
 $volume_increase = $run_app pactl set-sink-volume @DEFAULT_SINK@ +5%
 $mic_toggle = $run_app pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
-$bright_decrease = $run_app qs ipc call brightness decrease
-$bright_increase = $run_app qs ipc call brightness increase
+$bright_decrease = $run_app qs -c noctalia-shell ipc call brightness decrease
+$bright_increase = $run_app qs -c noctalia-shell ipc call brightness increase
 
 $player_pp = $run_app playerctl play-pause
 $player_set0 = $run_app playerctl position 0
@@ -30,7 +30,7 @@ exec-once = $run_app playerctld
 exec-once = $run_app hypridle
 
 # desktop shell
-exec-once = $run_app quickshell
+exec-once = $run_app quickshell -c noctalia-shell
 # menu
 exec-once = $run_app vicinae server
 # email client
