--- a/dot_config/hypr/conf.d/binds.conf
+++ b/dot_config/hypr/conf.d/binds.conf
@@ -18,7 +18,7 @@ bind = $mod, F11, exec, $run_app loginctl lock-session
 # suspend
 bind = $mod, F12, exec, $run_app systemctl suspend
 # toggle bar
-bind = $mod, B, exec, qs ipc call bar toggle
+bind = $mod, B, exec, qs -c noctalia-shell ipc call bar toggle
 
 #
 # Apps:
@@ -41,7 +41,7 @@ bind = $mod,        R, exec, $run_app $BROWSER
 bind = $mod+SHIFT,  R, exec, $run_app chromium # the fallback browser
 bind = $mod,        S, exec, $run_app strawberry
 bind = $mod,        W, exec, $term_exec nvim
-bind = $mod,        V, exec, $run_app qs ipc call screenRecorder toggle
+bind = $mod,        V, exec, $run_app qs -c noctalia-shell ipc call screenRecorder toggle
 
 #
 # Media keys:
@@ -84,10 +84,10 @@ bind = , XF86Search, exec, $menu
 #
 # Notifications:
 #
-bind = $mod,          F10, exec, $run_app qs ipc call notifications toggleDND # toggle dnd
-bind = $mod,          backspace, exec, $run_app qs ipc call notifications dismissOldest # dismiss last
-bind = $mod+SHIFT,    backspace, exec, $run_app qs ipc call notifications clear # dismiss all
-bind = $mod+CONTROL,  backspace, exec, $run_app qs ipc call notifications toggleHistory # show notifications
+bind = $mod,          F10, exec, $run_app qs -c noctalia-shell ipc call notifications toggleDND # toggle dnd
+bind = $mod,          backspace, exec, $run_app qs -c noctalia-shell ipc call notifications dismissOldest # dismiss last
+bind = $mod+SHIFT,    backspace, exec, $run_app qs -c noctalia-shell ipc call notifications clear # dismiss all
+bind = $mod+CONTROL,  backspace, exec, $run_app qs -c noctalia-shell ipc call notifications toggleHistory # show notifications
 
 #
 # Screenshots:
