--- a/dot_config/noctalia/settings.json
+++ b/dot_config/noctalia/settings.json
@@ -530,7 +530,7 @@
     },
     "wallpaper": {
         "automationEnabled": false,
-        "directory": "/home/joao/Pictures/Wallpapers",
+        "directory": "/home/joao/.local/share/wallpaper",
         "enableMultiMonitorDirectories": false,
         "enabled": true,
         "fillColor": "#000000",
